# Robotics-TestArm

./: CMakeLists.txt  Dockerfile  README.md  package.xml
include/: motor.h  motor_controller.h
launch/: joint_state_control.launch  robot_teleop.launch
msg/: ArmJointState.msg
src/: joint_state_steps.cpp  motor.cpp
src/arduino/: Constants.h
src/arduino/Joint_State_Controller/: Joint_State_Controller.ino
src/arduino/Motor/: Motor.h  Motor.ino  Motor_Controller.ino
src/arduino/Motor_Controller/: ArmJointState.h  Auto_Motor_Controller.ino  Motor_Controller.h  Motor_Controller.ino
